chore: refactor for formatting consistency and improved readability across services, tests, and strategies